# MSI

./: .flake8  .pre-commit-config.yaml  REPOS_INVENTORY.md  pyproject.toml
.github/: in-solidarity.yml
manifests/: repositories.yaml
scripts/: README.md  generate_inventory_markdown.py  poetry_tools.py  poetry_update_repo.py  release-it-check.py  release_it_repos.py  repositories.yaml
